Signed-off-by: youzipi <blake_12@qq.com>

--- a/web/test.html
+++ b/web/test.html
@@ -22,7 +22,7 @@
                         type : "post",
                         url : "json",
                         async : true,
-                        data: {str:obj}
+                        data: {str:JSON.stringify(obj)}
                     })
                 }
 
