--- a/web/test.html
+++ b/web/test.html
@@ -20,7 +20,7 @@
                 function() {
                     $.ajax({
                         type : "post",
-                        url : "json",
+                        url : "test",
                         async : true,
                         data: {str:JSON.stringify(obj)}
                     })
